# FileDozer

./: .gitignore  FileDozer_0.1.0_x64_en-US.msi  README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
.agents/rules/: editing-code.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: compression.rs  disk_info.rs  fallback_scanner.rs  index.rs  main.rs  ntfs_scanner.rs  path_builder.rs  search.rs  utf_tiny.rs
src/components/: CompressMenu.tsx  Editor.tsx  FileBrowser.tsx  FilterChips.tsx  RecentSearches.tsx  ResultList.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx
