[package]
name = "filedozer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fst = "0.4"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
strsim = "0.11"
rayon = "1"
mimalloc = { version = "0.1", default-features = false }
zip = { version = "2", features = ["deflate", "bzip2", "zstd"] }
tar = "0.4"
flate2 = { version = "1", features = ["zlib"] }
lz4_flex = { version = "0.11", features = ["frame"] }
walkdir = "2"
num_cpus = "1"
tauri-plugin-dialog = "2.6.0"
bincode = "1.3"
zstd = { version = "0.13", features = ["zstdmt"] }
brotli = "6"
xz2 = "0.1"
bzip2 = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
] }

[profile.release]
opt-level = 3
lto = false
codegen-units = 64
strip = true
panic = "abort"
